--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -6,15 +6,17 @@
 
 \begin{document}
 
-\newcommand {\xtq}[1]{{[XTQ : #1]}}
+\newcommand {\xtq}[1] {\begin{color}{red}{[XTQ : #1]}\end{color}}
 %start title
 \title{Dummy title}
 
 
-\author{\IEEEauthorblockN{Tianqi Xu}
+\author{
+\IEEEauthorblockN{Tianqi Xu}
 	\IEEEauthorblockA{Dept. of Mathematical and Computing Sciences\\
 		Tokyo Institute of Technology\\
-		2-12-1-W8-33, Ohokayama, Meguro-ku, Tokyo 152-8552 Japan\\
+		2-12-1-W8-33, Ohokayama,\\
+		Meguro-ku, Tokyo 152-8552 Japan\\
 	belldandyxtq@gmail.com}
 	\and
 	\IEEEauthorblockN{Kento Sato}
@@ -26,7 +28,8 @@
 	\IEEEauthorblockN{Satoshi Matsuoka}
 	\IEEEauthorblockA{Global Scientific Information and Computing Center\\
 		Tokyo Institute of Technology\\
-		2-12-1-W8-33, Ohokayama, Meguro-ku, Tokyo 152-8552 Japan\\
+		2-12-1-W8-33, Ohokayama,\\
+		Meguro-ku, Tokyo 152-8552 Japan\\
 	matsu@is.titech.ac.jp}
 }
 
