--- a/paper/src/architecture.tex
+++ b/paper/src/architecture.tex
@@ -6,7 +6,8 @@ An overview of I/O burst buffer architecture is described in this section.
 As we mentioned in the previous section, our model takes advantage of high throughput inside a system, and use buffer queue system in order to increase throughput between two systems.
 %Two kinds of buffer are used in our I/O burst buffer architecture, the first one is in client computing node, first buffer user I/O in the same node, another one is in I/O buffer nodes.
 The main idea is that some of computing nodes serve as a I/O buffer nodes in each system, for write I/O data, if buffer queue in I/O buffer nodes is not full, data can first be buffered in buffer queue in the same system, and then client can finish write operation without waiting data be finally transferred to storage system.
-Actually, since many jobs use multi-nodes work together and the output of some nodes can be the input of the others, so for most cases, output data will still be buffered in buffer queue until the whole job finished.
+Actually, since many jobs use multiple nodes work together and the output of some nodes can be the
+input of the others, so for most cases, output data will still be buffered in buffer queue until the whole job finished.
 As for reading, if that file is stored in the buffer queue, compute nodes can read from I/O nodes through interconnection network.
 In other cases (buffer queue is full when issue a write request or requested file is not stored in buffer queue when issue a read request we call it cache miss), an read from or write back operation described below will be executed. 
 
@@ -23,16 +24,16 @@ we target at common cloud environment like Amazon EC2, which compute node and da
 
 \begin{figure}[tb]
 	\centering
-%	\includegraphics{../img/IOserver}
-	\caption{I/O server and buffer queue}
-	\label{I/O server}
+	\includegraphics[width=8cm]{img/client_daemon}
+	\caption{Client Daemon}
+	\label{architecture:client_daemon}
 \end{figure}
 
 \begin{figure}[tb]
 	\centering
-%	\includegraphics{../img/overview}
+	\includegraphics[width=8cm]{img/architecture_overview}
 	\caption{overall illustrate of I/O Burst Buffer Architecture}
-	\label{overview}
+	\label{architecture:overview}
 \end{figure}
 
 There are two kinds of nodes in our I/O burst buffer architecture: \emph{compute nodes} and \emph{I/O burst nodes}, compute nodes run user's application and I/O burst nodes.
