--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -34,6 +34,36 @@ Cloud computing can have following benefits:
   they used.
 \end{itemize}
 
+\subsection{interconnection network in cloud}
+\begin{figure}
+\centering
+\includegraphics[width=8cm]{img/amazon_throughput}
+\caption{Amazon Interconnection Network Throughput}
+\label{}
+\end{figure}
+
+We use Iperf\cite{iperf}, which was developed by NLANR/DAST as a modern alternative for measuring
+TCP and UDP bandwidth performance, and IOR\cite{IOR}, which is widely used for benchmarking
+parallel file systems using POSIX, MPIIO, or HDF5 interfaces.
+
+We can see that the I/O throughput also grows as number of nodes grows but the aggregate throughput
+is only 100-140 MB/s, which is limited by Internet bandwidth, about 40-80 times smaller than
+throughput inside TSUBAME.
+For data-sensitive application, low I/O throughput is devastating, especially for application
+running on supercomputers, furthermore, lower I/O throughput leads a longer execution time,
+according to Amazon pay-as-you-go policy, longer execution time means more cost.
+
+However, when we look at interconnection network throughput inside Amazon as Figure.~\ref{point to
+point connection AMAZON} shows, although we only show the result up to 8 pairs of nodes, each node
+achieved only 135MB/s (1GBit/s), the influence between nodes is extremely small, figure shows a
+perfect linear line also a strong scalability.
+since when we running the benchmark, many other users were also running applications on Amazon, so
+we can assume that highest throughput 1GB/s (8Gbit/s) shown in Fig.~\ref{point to point connection
+AMAZON} is not the maximum bandwidth of interconnection network in Amazon EC2 .
+Comparing Fig.~\ref{point to point connection AMAZON} with Fig.~\ref{throughput AMAZON to OURLAB} 
+and Fig.~\ref{point to point connection LAB}, interconnection network throughput is much higher than
+Internet, it shows that our solution, by using I/O buffer nodes can achieve a higher
+interconnection network throughput than Internet.
 \subsection{burst buffer}
 \begin{figure}
 \centering
@@ -62,3 +92,36 @@ Furthermore, applications which write a lot also can benefit from burst buffer s
 output data in burst buffer, application can go ahead without waiting data be finally write to
 storage.
 
+\subsection{Data Locality}
+
+\begin{table}
+\centering
+\begin{tabular}{|c|c|}
+Montage		&		an application\\
+pov ray\\
+supernovae\xtq{not exact}
+\end{tabular}
+\caption{Work Flow Applications}
+\label{background:work flow applications}
+\end{table}
+
+\begin{figure}
+\centering
+\includegraphics[width=8cm]{img/data_locality.pdf}
+\caption{Data Locality}
+\label{background:data locality}
+\end{figure}
+
+Since applications I/O pattern will affect the performance gains by using our propose architecture
+greatly, We measure the I/O pattern for the applications shown in Table~.\ref{background:work flow
+applications}.
+We count the duplicated read at the same position and all write as data locality size, since all
+these cases data can be read from or write to buffer.
+Figure~.\ref{background:data locality} shows the results of these three applications. we can see
+that the I/O pattern of all the three applications shows a strong data locality. Montage and Pov ray
+are over 90\% and supernovae achieved over 80\%.
+
+%The reason is that these applications are work flow application, the whole job consists of several
+%sub jobs, the output of previous job can be the input of subsequent job, also some job will access
+%the same input file.
+%So if we buffer the output data and input data, the subsequent job can access the data via LAN.
