--- a/paper/src/architecture.tex
+++ b/paper/src/architecture.tex
@@ -11,13 +11,14 @@ input of the others, so for most cases, output data will still be buffered in bu
 As for reading, if that file is stored in the buffer queue, compute nodes can read from I/O nodes through interconnection network.
 In other cases (buffer queue is full when issue a write request or requested file is not stored in buffer queue when issue a read request we call it cache miss), an read from or write back operation described below will be executed. 
 
-\subsection{target environment}
+\subsection{Target Environment}
 First, we introduce our target environment.
 we target at common cloud environment like Amazon EC2, which compute node and data center are distributed geographically distributed.
 
 \begin{itemize}
 	\item All compute nodes are connected by large bandwidth and interconnection network, note network topology maybe different in each system, so topology is not specified here, interconnection network performance is measured by throughput.
-	\item There is a shared storage for date sharing inside system, all compute nodes are connected with shared storage via Internet or other lower network, also the file system of shared storage is not specified and performance is measured by throughput.
+	\item There is a shared storage for data sharing inside system, all compute nodes are connected
+	with shared storage via Internet or other lower network, also the file system of shared storage is not specified and performance is measured by throughput.
 \end{itemize}
 
 \subsection{I/O Burst Buffer Architecture}
@@ -40,7 +41,8 @@ There are two kinds of nodes in our I/O burst buffer architecture: \emph{compute
 Public clouds usually provide several type of instance for difference purpose, some are compute optimized(like C3 instances provided by Amazon) provides a high compute performance,
 some are memory optimized (such as R3 instances in Amazon EC2) provide a huge amount of memory(up to 244GB in R3 family), also memory size can be easily expanded by using solid storage driver(SSD) as a swap device, usually such instances have SSD inside.
 
-Fig.~\ref{I/O server} is a illustrate of I/O server inside client nodes and buffer queue in I/O burst nodes.
+Fig.~\ref{architecture:client_daemon} is a illustrate of client daemon inside client nodes and
+buffer queue in I/O burst nodes.
 In each compute node, there is a client daemon, which is a file system client used to buffer I/O data, communicate with I/O buffer nodes, including send I/O request and send or receive I/O data.
 
 When a user application issue a write request, I/O data will be buffered in that node by I/O daemon, when user close the file, call flush function or I/O data size exceed I/O server buffer size, I/O server will try to transfer I/O data to buffer queue in I/O burst buffer, if buffer queue in not full, I/O data will be sent to I/O burst buffer via interconnection network and can be seen among computing nodes in the same system after that.
@@ -53,4 +55,4 @@ Similarly when user issue a read request, there are two conditions: required fil
 In the first cases, file can be transferred to computing nodes from buffer queue directly, and can achieve a high throughput.
 If data is not in buffer queue, then a read operation described below will be executed, since data must be transferred from storage in another system, in this case, throughput will depend on Internet condition and it is hard to achieve a high throughput.
 
-Fig.~\ref{overview} shows a overall illustrate of I/O burst buffer architecture.
+Fig.~\ref{architecture:overview} shows a overall illustrate of I/O burst buffer architecture.
