--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -1,7 +1,7 @@
 %to do
 \section{background}
 \label{sec:background}
-\subsection{cloud computing}
+\subsection{Cloud Computing}
 \begin{figure}
 \centering
 \includegraphics[width=4cm]{img/cloud_models.pdf}
@@ -34,37 +34,34 @@ Cloud computing can have following benefits:
   they used.
 \end{itemize}
 
-\subsection{interconnection network in cloud}
+\subsection{Interconnection Network vs. Shared Storage}
+\begin{figure}
+\centering
+%\includegrpahics[width=8cm]{img/}
+\end{figure}
 \begin{figure}
 \centering
 \includegraphics[width=8cm]{img/amazon_throughput}
 \caption{Amazon Interconnection Network Throughput}
-\label{}
+\label{background:amazon throughput}
 \end{figure}
+Many previous research measured the I/O throughput in cloud \cite{Chiba,Transactions_a_la_carte,
+Interactive_Use_of_Cloud_Services,Amazon_S3_for_Science_Grids,anevaluation}, the result shows the
+average write throughput of Amazon S3 is around 15MB/s and read 30MB/s, and the value is quite
+unstable\cite{anevaluation}.
+Because the Amazon S3 data center is geographically-distributed, and connect via Internet, compare
+to modern parallel file systems Amazon S3 can not achieve a high throughput.
 
-We use Iperf\cite{iperf}, which was developed by NLANR/DAST as a modern alternative for measuring
-TCP and UDP bandwidth performance, and IOR\cite{IOR}, which is widely used for benchmarking
-parallel file systems using POSIX, MPIIO, or HDF5 interfaces.
+However, when we look at interconnection network throughput inside Amazon EC2, as Figure.~\ref{background:amazon throughput} shows, although we only show the result up to 8 pairs of nodes, each
+node achieved only 135MB/s (1GBit/s), the influence between nodes is extremely small, figure shows a perfect linear line also a strong scalability.
+We measure the interconnection network by using Iperf\cite{iperf}, which was developed by NLANR/DAST
+as a modern alternative for measuring TCP and UDP bandwidth performance.
+When we running the
+benchmark, many other users were also running applications on Amazon, so we can assume that highest
+throughput 1GB/s (8Gbit/s) shown in Figure.~\ref{background:amazon throughput} is not the
+maximum bandwidth of interconnection network in Amazon EC2.
 
-We can see that the I/O throughput also grows as number of nodes grows but the aggregate throughput
-is only 100-140 MB/s, which is limited by Internet bandwidth, about 40-80 times smaller than
-throughput inside TSUBAME.
-For data-sensitive application, low I/O throughput is devastating, especially for application
-running on supercomputers, furthermore, lower I/O throughput leads a longer execution time,
-according to Amazon pay-as-you-go policy, longer execution time means more cost.
-
-However, when we look at interconnection network throughput inside Amazon as Figure.~\ref{point to
-point connection AMAZON} shows, although we only show the result up to 8 pairs of nodes, each node
-achieved only 135MB/s (1GBit/s), the influence between nodes is extremely small, figure shows a
-perfect linear line also a strong scalability.
-since when we running the benchmark, many other users were also running applications on Amazon, so
-we can assume that highest throughput 1GB/s (8Gbit/s) shown in Fig.~\ref{point to point connection
-AMAZON} is not the maximum bandwidth of interconnection network in Amazon EC2 .
-Comparing Fig.~\ref{point to point connection AMAZON} with Fig.~\ref{throughput AMAZON to OURLAB} 
-and Fig.~\ref{point to point connection LAB}, interconnection network throughput is much higher than
-Internet, it shows that our solution, by using I/O buffer nodes can achieve a higher
-interconnection network throughput than Internet.
-\subsection{burst buffer}
+\subsection{Burst Buffer}
 \begin{figure}
 \centering
 \includegraphics[width=8cm]{img/burst_buffer.pdf}
@@ -96,10 +93,14 @@ storage.
 
 \begin{table}
 \centering
-\begin{tabular}{|c|c|}
-Montage		&		an application\\
-pov ray\\
-supernovae\xtq{not exact}
+\begin{tabular}{|c|p{150pt}|}
+\hline
+Montage		&		a portable software toolkit for constructing custom, science-grade 
+mosaics by composing multiple astronomical images\cite{montage}.\\\hline
+pov ray		&		a ray tracing program which generates images from a text-based scene description, and is
+available for a variety of computer platforms\cite{povray}.\\\hline
+SExtractor	&	a program that builds a catalogue of objects from an astronomical image	\\
+\hline
 \end{tabular}
 \caption{Work Flow Applications}
 \label{background:work flow applications}
@@ -112,9 +113,14 @@ supernovae\xtq{not exact}
 \label{background:data locality}
 \end{figure}
 
-Since applications I/O pattern will affect the performance gains by using our propose architecture
-greatly, We measure the I/O pattern for the applications shown in Table~.\ref{background:work flow
-applications}.
+Data locality s a phenomenon describing the same value, or related storage locations, being
+frequently accessed.
+Technology like cache, instruction prefetch for memory, or the advanced branch predictor
+at the pipelining of processors is based on this phenomenon.
+Since our proposal system buffer I/O data and as previous section shows the buffered data can be
+accessed in a high throughput, applications' I/O data locality will affect the performance gains by
+using our propose system greatly, So we measure the I/O data locality for the applications shown in
+Table~.\ref{background:work flow applications}.
 We count the duplicated read at the same position and all write as data locality size, since all
 these cases data can be read from or write to buffer.
 Figure~.\ref{background:data locality} shows the results of these three applications. we can see
