--- a/paper/src/conclusion.tex
+++ b/paper/src/conclusion.tex
@@ -1,4 +1,8 @@
 %to do
 \section{conclusion}
 \label{sec:conclusion}
-section VII: conclusion
+In this paper, we propose a cloud based burst buffer system to burst the I/O throughput in cloud.
+We implement a prototype of our proposal system, and evaluate it on Amazon EC2/S3 public cloud.
+We also simulate three data intensive applications on our proposal system.
+We achieve a up to a up to 8 times speed up for a single user in reading, as well as 14 times speed
+up for the whole system in writing.
