--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -44,6 +44,6 @@ number of I/O nodes. Figure~.\ref{evaluation:one user}
 Our architecture can burst I/O performance for multiple users
 X: number of client=number of I/O nodes Y:throughput
 
-\subsection{Simulation for applications}
+\subsection{Simulation for Applications}
 Show our architecture can burst I/O performance for applications
 x
