--- a/paper/src/related_work.tex
+++ b/paper/src/related_work.tex
@@ -2,11 +2,11 @@
 \section{related work}
 \label{sec:related work}
 
-\subsection{burst buffer}
+\subsection{Burst Buffer}
 Ning Liu\emph{el at.} \cite{on_the_role_of_burst_buffers} proposed a new tier of solid-state burst
 buffers in high performance(HPC) system, 
 
-\subsection{burst communication throughput in cloud bursting}
+\subsection{Burst Communication Throughput in Cloud Bursting}
 Cloud computing is becoming a topic of much interest in recent years, not only famous Internet
 companies like google, Amazon, IBM, Oracle, Microsoft provide public cloud, many companies start to
 build or have built private cloud for internal computation.
